# x-bot

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README-DMB.md  README.md  compose.yml
.github/workflows/: core.yml
src/: bot.rs  error.rs  github.rs  lib.rs  main.rs  x.rs
src/config/: env.rs
src/github/: client.rs  contributor.rs  mod.rs  types.rs
src/test/: mocks.rs  mod.rs
src/webhook/: handler.rs
src/x/: client.rs
test_resources/: mock_delete_event.json  mock_first_commits_page.json  mock_push_event_with_announced_contributor.json  mock_push_event_with_new_contributor.json  mock_release_event.json  mock_second_commits_page.json
