[package]
name = "x-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
env_logger = "0.11.5"
envy = "0.4.2"
indoc = "2.0.5"
log = "0.4.22"
oauth1 = { version = "0.6.1", package = "oauth1-request" }
octocrab = "0.42.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt", "macros"] }

[dev-dependencies]
httpmock = { version = "0.7.0", features = ["env_logger"] }
